try fix for safari overflow scroll

--- a/client/src/assets/styles/dashboardsidebarnav.scss
+++ b/client/src/assets/styles/dashboardsidebarnav.scss
@@ -12,7 +12,8 @@
 .dashboard-nav-container {
     display: flex;
     width: 100vw;
-    height: 100vh;
+    // height: 100vh;
+    min-height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
